added eventListeners in js and added color palette

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
             <div class="hidden-box">
-                <div class="text-box hidden">
+                <div class="text-box">
                     <h2>Want to see how this site was made?</h2>
                     <p>Follow along with this tutorial from Ania Kubow</p>
                     <p>Ania is a Software Developer raised in the UAE.
@@ -22,7 +22,7 @@
 
     <div class="box-container">
 
-        <div class="small-box box">
+        <div class="small-box box" id="expand">
             <div class="pill">
                 <div class="arrow left-expand-arrow"></div>
             </div>
@@ -59,7 +59,7 @@
         <div class="small-box box" id="reverse">
             <div class="pill">
                 <svg class="rotating-icon" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 120 144" fill="none">
-                    <path d="M59.5698 112.14C88.6033 112.14 112.14 88.6033 112.14 59.5698C112.14 30.5363 88.6033 7 59.5698 7C30.5363 7 7 30.5363 7 59.5698M59.5698 79.2171V100.457V144" stroke="rgb(38, 38, 38)" stroke-width="14"/>
+                    <path id="icon" d="M59.5698 112.14C88.6033 112.14 112.14 88.6033 112.14 59.5698C112.14 30.5363 88.6033 7 59.5698 7C30.5363 7 7 30.5363 7 59.5698M59.5698 79.2171V100.457V144" stroke="rgb(38, 38, 38)" stroke-width="14"/>
                     </svg>
             </div>
         </div>
@@ -103,7 +103,7 @@
         <div class="x-box">
             <p>CLICK</p>
             <svg id="x-letter-svg"  xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 767 767" fill="none">
-                <path opacity="0.55" d="M362.286 601.996L222.279 742.003C198.848 765.435 160.858 765.435 137.426 742.003L24.9965 629.573C1.56504 606.142 1.56504 568.152 24.9965 544.72L165.004 404.713C176.719 392.997 176.719 374.003 165.004 362.287L24.9965 222.28C1.56504 198.848 1.56504 160.858 24.9965 137.427L137.426 24.9969C160.858 1.56541 198.848 1.56541 222.279 24.9969L362.286 165.004C374.002 176.72 392.997 176.72 404.713 165.004L544.72 24.9969C568.151 1.56541 606.141 1.56541 629.573 24.9969L742.003 137.427C765.434 160.858 765.434 198.848 742.003 222.28L601.996 362.287C590.28 374.003 590.28 392.997 601.996 404.713L742.003 544.72C765.434 568.152 765.434 606.142 742.003 629.573L629.573 742.003C606.141 765.435 568.151 765.435 544.72 742.003L404.713 601.996C392.997 590.28 374.002 590.28 362.286 601.996Z" stroke="rgb(38, 38, 38)" stroke-width="20"/>
+                <path id="x-letter"  opacity="0.55" d="M362.286 601.996L222.279 742.003C198.848 765.435 160.858 765.435 137.426 742.003L24.9965 629.573C1.56504 606.142 1.56504 568.152 24.9965 544.72L165.004 404.713C176.719 392.997 176.719 374.003 165.004 362.287L24.9965 222.28C1.56504 198.848 1.56504 160.858 24.9965 137.427L137.426 24.9969C160.858 1.56541 198.848 1.56541 222.279 24.9969L362.286 165.004C374.002 176.72 392.997 176.72 404.713 165.004L544.72 24.9969C568.151 1.56541 606.141 1.56541 629.573 24.9969L742.003 137.427C765.434 160.858 765.434 198.848 742.003 222.28L601.996 362.287C590.28 374.003 590.28 392.997 601.996 404.713L742.003 544.72C765.434 568.152 765.434 606.142 742.003 629.573L629.573 742.003C606.141 765.435 568.151 765.435 544.72 742.003L404.713 601.996C392.997 590.28 374.002 590.28 362.286 601.996Z" stroke="rgb(38, 38, 38)" stroke-width="20"/>
                 </svg>
         </div>
         <div class="large-box box" id="squish">
@@ -125,6 +125,7 @@
         </div>
 
     </div>
+        <script src ="colors.js"></script>
         <script src ="app.js"></script>
     </body>
     </html>
