tedious styling in js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
             <div class="hidden-box">
-                <div class="text-box">
+                <div class="text-box hidden">
                     <h2>Want to see how this site was made?</h2>
                     <p>Follow along with this tutorial from Ania Kubow</p>
                     <p>Ania is a Software Developer raised in the UAE.
