--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <p>Ania is a Software Developer raised in the UAE.
                         She frequently puts out tutorials on her <a href="https://www.youtube.com/watch?v=lOAk7-bPyMk&ab_channel=CodewithAniaKub%C3%B3w ">YouTube Channel</a>
                     </p>
-                    <iframe src=""></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=lOAk7-bPyMk&ab_channel=CodewithAniaKub%C3%B3w"></iframe>
                     <p>Click <a href="https://www.youtube.com/watch?v=lOAk7-bPyMk&ab_channel=CodewithAniaKub%C3%B3w">here</a> to view more</p>
                 </div>
             </div>
@@ -52,7 +52,7 @@
 
         <div class="long-box box">
             <div class="pill">
-                <a href="https://www.saaa.am/">INSPIRED BY SAAM.AM</a>
+                <a href="https://www.saaa.am/">INSPIRED BY SAAaM.AM</a>
             </div>
         </div>
 
